# nRF-IEEE-802.15.4-radio-driver

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  nRF-IEEE-802.15.4-radio-driver.packsc  nrf_802154_driver_sources.cmake
cmake/: cross_compilation_cfg.cmake
cmake/platform/: nrf52811_xxAA.cmake  nrf52833_xxAA.cmake  nrf52840_xxAA.cmake
driver/: README.md  nrf_802154_driver_sources.cmake
driver/doc/: aliases.doxyfile  buildjars.xml  links.doxyfile  radio_driver.doxyfile  radio_driver_offline.doxyfile
driver/doc/buildfiles/: extra_stylesheet.css  extra_stylesheet_offline.css  footer.html  header.html
driver/doc/dox/: 01_mainpage.dox  antenna_diversity.dox  architecture.dox  debug_mode.dox  features_description.dox  front_end_module.dox  hardware_resources.dox  multiprotocol_support.dox  radio_driver_coex.dox  rd_release_notes.dox  source_files.dox
driver/doc/filelists/: radio_driver.doxyfile
driver/doc/images/ant_diversity/src/: ant_diversity_energy_detection.puml  ant_diversity_interface.drawio  ant_diversity_manual.puml  ant_diversity_rx_procedure.puml  ant_diversity_rx_timeout.puml  ant_diversity_rx_timing.puml
driver/doc/images/coex/src/: coex_rx_general.puml  coex_rx_req_mode_destined.puml  coex_rx_req_mode_energy_detection.puml  coex_rx_req_mode_preamble.puml  coex_tx_general.puml  coex_tx_mode_after_cca.puml  coex_tx_mode_before_cca.puml  coex_tx_mode_full_csmaca.puml
driver/doc/manifest/: MANIFEST.MF.rd
driver/include/: nrf_802154_config.h
driver/platform/random/: nrf_802154_random_newlib.c  nrf_802154_random_stdlib.c
driver/src/: nrf_802154.c  nrf_802154_core.c  nrf_802154_critical_section.c  nrf_802154_debug_assert.c  nrf_802154_rssi.c  nrf_802154_trx.c
driver/src/mac_features/: nrf_802154_csma_ca.c  nrf_802154_delayed_trx.c  nrf_802154_frame_parser.c
driver/src/mac_features/ack_generator/: nrf_802154_enh_ack_generator.c
examples/: CMakeLists.txt  README.md
examples/common/: CMakeLists.txt
examples/common/mpsl_utils/: CMakeLists.txt
examples/common/mpsl_utils/src/: mpsl_utils.c  mpsl_utils.h
examples/nrf_802154_delayed_echo_client/: CMakeLists.txt  README.md
examples/nrf_802154_delayed_echo_client/src/: nrf_802154_delayed_echo_client.c
examples/nrf_802154_delayed_echo_server/: CMakeLists.txt  README.md
examples/nrf_802154_delayed_echo_server/src/: nrf_802154_delayed_echo_server.c
examples/nrf_802154_echo_client/: CMakeLists.txt  README.md
examples/nrf_802154_echo_client/src/: nrf_802154_echo_client.c
examples/nrf_802154_echo_server/: CMakeLists.txt  README.md
examples/nrf_802154_echo_server/src/: nrf_802154_echo_server.c
nrf_802154_sl/: nrf_802154_sl_files.cmake
nrf_802154_sl/platform/clock/: nrf_802154_clock.c  nrf_802154_clock_mpsl.c  nrf_802154_clock_zephyr.c
nrf_802154_sl/platform/gpiote/: nrf_802154_gpiote_none.c  nrf_802154_gpiote_zephyr.c
nrf_802154_sl/platform/irq/: nrf_802154_irq_baremetal.c  nrf_802154_irq_zephyr.c
nrf_802154_sl/platform/lp_timer/: nrf_802154_lp_timer_zephyr.c
scripts/: pretty.sh
serialization/src/: nrf_802154_buffer_mgr_dst.c  nrf_802154_buffer_mgr_src.c  nrf_802154_kvmap.c  nrf_802154_spinel_app.c  nrf_802154_spinel_dec_app.c  nrf_802154_spinel_dec_net.c  nrf_802154_spinel_net.c
serialization/src/include/: nrf_802154_spinel_datatypes.h
sl/: Kconfig  nrf_802154_sl_files.cmake
sl/platform/gpiote/: nrf_802154_gpiote_none.c
src/: nrf_802154.c  nrf_802154.h  nrf_802154_config.h  nrf_802154_core.c  nrf_802154_critical_section.c  nrf_802154_debug.h  nrf_802154_request_swi.c  nrf_802154_rssi.c  nrf_802154_swi.c  nrf_802154_trx.c
src/fem/three_pin_gpio/: nrf_fem_config.h
src/mac_features/: nrf_802154_ack_timeout.c  nrf_802154_csma_ca.c  nrf_802154_ifs.c
src/platform/lp_timer/: nrf_802154_lp_timer.c
src/platform/random/: nrf_802154_random_newlib.c  nrf_802154_random_stdlib.c  nrf_802154_random_zephyr.c
src/raal/simulator/: nrf_raal_simulator.c
test/unit tests/ack_pending_bit/: test_nrf_driver_ack_pending_bit.json  unity_test.c
test/unit tests/ack_source_matching/: test_nrf_driver_ack_source_matching.json  unity_test.c
test/unit tests/fsm/: test_nrf_driver_fsm.json  unity_test.c
test/unit tests/fsm_cca/: test_nrf_driver_fsm.json  unity_test.c
test/unit tests/fsm_cont_carrier/: test_nrf_driver_fsm.json  unity_test.c
test/unit tests/fsm_ed/: test_nrf_driver_fsm.json  unity_test.c
test/unit tests/fsm_frame_filtering/: test_nrf_driver_fsm_frame_filtering.json  unity_test.c
test/unit tests/fsm_frame_filtering_BCMATCH_disabled/: test_nrf_driver_fsm_frame_filtering_BCMATCH_disabled.json  unity_test.c
test/unit tests/fsm_rx/: test_nrf_driver_fsm.json  unity_test.c
test/unit tests/fsm_tx/: test_nrf_driver_fsm.json  unity_test.c
tools/event_decoder/: decoder.html
zephyr/: module.yml
